--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
   <body>
     <header class="page-header">
       <div class="container">
-      v.s.zagurskiy@gmail.com
+        <a class = 'header-email'
+        href="mailto: v.s.zagurskiy@gmail.com">v.s.zagurskiy@gmail.com</a>
       </div>
     </header>
 
@@ -24,6 +25,9 @@
     <section class="intro">
       <div class="container">
         <h2 class="subheading">Let's get acquainted</h2>
+        <figure class = 'user-image'>
+          <img src = 'files/user.jpg' width="928" height="536">
+        </figure>
         <h3>A few words about myself</h3>
         <p>About a year ago I started learning Python, now I'm learning HTML, CSS</p>
         <h3>How can I help?</h3>
@@ -31,21 +35,40 @@
       </div>
     </section>
 
+    <div class='container'>
+      <div class="skills">
+        <h3>My skills</h3>
+        <dl class="skills-list">
+          <dt class="skill-html">HTML</dt>
+          <dd class="level"><div style = 'width: 60%;'>60%</div></dd>
+          <dt class="skill-css">CSS</dt>
+          <dd class="level"><div style = 'width: 40%'>40%</div></dd>
+        </dl>
+      </div>
+    </div>
+
     <section class="portfolio">
       <div class="container">
         <h2 class="subheading">My projects</h2>
+          <figure class = 'priject-image'>
+            <img src="files/project.jpg" width='928' height="536" alt="Сайт
+            магазина товаров для дома">
+            <a class="button" href="source/project-gloevk/index.html">Открыть страницу</a>
 
-        <h3>For now, I have no projects.</h3>
-        <p></p>
 
-        <h3></h3>
-        <p></p>
+          <h3></h3>
+          <p></p>
+
+          <h3></h3>
+          <p></p>
+        </figure>
       </div>
     </section>
 
     <footer class="page-footer">
       <div class="container">
-        v.s.zagurskiy@gmail.com
+        <a class = 'footer-email'
+        href="mailto: v.s.zagurskiy@gmail.com">v.s.zagurskiy@gmail.com</a>
       </div>
     </footer>
   </body>
